# wordle

./: .gitignore  README.md  common_words.txt  main.py  manage.py  most_common_words.py  most_familiar_words.py  old_webpack.config.js  package-lock.json  package.json  pyproject.toml  webpack.config.js
frontend/: package-lock.json  package.json  tsconfig.json  webpack-stats.json
frontend/src/: App.css  App.tsx  api.ts  axiosConfig.ts
frontend/src/Interfaces/: Word.ts
frontend/src/components/: SuggestedGuesses.css  SuggestedGuesses.tsx  WordTest.tsx  Wordle.tsx  WordleBoard.css  WordleBoard.tsx  word_test.tsx
frontend/src/utils/: getSuggestedGuesses.ts
frontend/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
proj/: asgi.py  urls.py  wsgi.py
proj/management/commands/: create_app_token.py
proj/settings/: base.py  development.py  production.py  settings_loader.py
proj/words/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
proj/words/management/commands/: analyze_past_answers.py  clean_words.py  load_words.py
proj/words/management/data/: word_freq_measure.txt
proj/words/migrations/: 0001_initial.py  0002_word_familiarity.py
proj/words/templates/frontend/: index.html
proj/words/templates/words/: base.html  index.html
wordle/: settings.py  urls.py
wordle/words/: apps.py  models.py  serializers.py  views.py
wordle/words/templates/words/: index.html
